--- a/app/index.html
+++ b/app/index.html
@@ -40,9 +40,11 @@
     <link href="node_modules/@blueprintjs/table/dist/table.css" rel="stylesheet"/>
     <link href="node_modules/@blueprintjs/datetime/dist/blueprint-datetime.css" rel="stylesheet"/>
     <link href="styles.css" rel="stylesheet">
+<!--    <script src="lib/require.js"></script>-->
 </head>
 <body class="pt-dark">
 <div id="container" style="overflow: hidden;"></div>
+
 <script src="renderer.js"></script>
 </body>
 </html>
